tests/specs/ecosystem/oak/oak/12_6_2.test
oak/oak/12.6.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@oak/commons@0.4": "jsr:@oak/commons@0.4.0",
      "jsr:@std/assert@0.210": "jsr:@std/assert@0.210.0",
      "jsr:@std/assert@^0.210.0": "jsr:@std/assert@0.210.0",
      "jsr:@std/crypto@0.210": "jsr:@std/crypto@0.210.0",
      "jsr:@std/encoding@0.210": "jsr:@std/encoding@0.210.0",
      "jsr:@std/encoding@^0.210.0": "jsr:@std/encoding@0.210.0",
      "jsr:@std/http@0.210": "jsr:@std/http@0.210.0",
      "npm:path-to-regexp@6.2.1": "npm:path-to-regexp@6.2.1"
    },
    "jsr": {
      "@oak/commons@0.4.0": {
        "integrity": "f549bc09bbc213479b4400617d546803a3babb3021d93d1f8a1743e6423b76e8",
        "dependencies": [
          "jsr:@std/assert@0.210",
          "jsr:@std/encoding@0.210"
        ]
      },
      "@std/assert@0.210.0": {
        "integrity": "2c1fa547f49be7db2687f98a89fe8fbb1aab9619848cebd21541a8f4f3f4f67f"
      },
      "@std/crypto@0.210.0": {
        "integrity": "14a7f91ed0f944710a80080574017bbd587e748dc1be96116f6db22abfd7f9c9",
        "dependencies": [
          "jsr:@std/assert@^0.210.0",
          "jsr:@std/encoding@^0.210.0"
        ]
      },
      "@std/encoding@0.210.0": {
        "integrity": "3a53a69620886baa8ca885496362849577fcf6f8e6a792aeaf7da407d02799c8"
      },
      "@std/http@0.210.0": {
        "integrity": "7630e526d6978ce231f5aa3b4073428b235781c260032ff95877aa2f5d70cad0",
        "dependencies": [
          "jsr:@std/assert@^0.210.0",
          "jsr:@std/encoding@^0.210.0"
        ]
      }
    },
    "npm": {
      "path-to-regexp@6.2.1": {
        "integrity": "sha512-JLyh7xT1kizaEvcaXOQwOc2/Yhw6KZOvPf1S8401UyLk86CU79LN3vl7ztXGm/pZ+YjoyAJ4rxmHwbkBXJX+yw==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:208:77

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:211:26

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:213:80

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
   * `"error"` and `"listen"`. */ addEventListener(param0?: any, param1?: any, param2?: any): any {
                                  ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/application.ts:215:35

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  readonly value: Deno.Reader;
                       ~~~~~~
    at file://<tmpdir>/body.ts:47:24

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  constructor(contentType: string, body: Deno.Reader){}
                                              ~~~~~~
    at file://<tmpdir>/multipart.ts:133:47

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                          ~~~~~~
    at file://<tmpdir>/range.ts:22:27

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                                        ~~~~~~
    at file://<tmpdir>/range.ts:22:41

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Closer'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                                                      ~~~~~~
    at file://<tmpdir>/range.ts:22:55

Found 9 errors.

